--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,4 +2,11 @@ flake8==3.5.0
 mccabe==0.6.1
 pycodestyle==2.3.1
 pyflakes==1.6.0
+
+# Deps do pytest
+atomicwrites==1.0
+attrs==17.4.0
+more-itertools==4.0.0
+pluggy==0.5
+py==1.5.0
 -r requirements.txt
