--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python:
   - 3.6
 install:
-  - pip install -r requirements-dev.txt
+  - pip install -r requirements-dev.txt codecov
 script:
   - flake8
-  - pytest feira_flores
+  - pytest feira_flores --cov=feira_flores
+after_success:
+  - codecov
