--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,14 +4,16 @@ pycodestyle==2.3.1
 pyflakes==1.6.0
 
 # Deps do pytest
-atomicwrites==1.0
 attrs==17.4.0
-more-itertools==4.0.0
 pluggy==0.5
-py==1.5.3
+six==1.10.0
+setuptools
+atomicwrites==1.0
+more-itertools==4.0.0
+py==1.5.0
 pytest==3.6.0
 
-# Coveragex
+# Coverage
 coverage==4.5.1
 pytest-cov==2.5.1
 
